# factool

./: repo-to-text_2024-12-19-11-54-40-UTC.txt  setup.cfg
factool/: env_config.py
factool/utils/: claim_extractor.py  openai_wrapper.py
