[metadata]
name = factool
version = attr: version.__version__
description = Factuality Detection for Generative AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GAIR-NLP/factool
author = GAIR Research Group
license = Apache License
classifiers =
    Intended Audience :: Developers
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
install_requires =
    openai
    PyYAML
    asyncio
    numpy
    pydantic
    pydantic-settings
    scholarly
    scikit-learn
    aiohttp
    fastapi
    uvicorn
    jsonlines


[options.package_data]
factool.utils.prompts = *.yaml



[flake8]
application-import-names = factool
exclude = __pycache__, datasets
extend-ignore = E203, BLK100, W503, FI10, FI11, FI12, FI13, FI14, FI15, FI16, FI17, FI58
filename = ./factool/*.py, ./setup.py
max-line-length = 88

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
src_paths = factool